# ModernCPP

./: .gitignore  ModerCPPFunc.sln  README.md
CppConcurrencyInAction/: CppConcurrencyInAction.sln
CppConcurrencyInAction/ManagingThreads/: ManagingThreads.vcxproj  ManagingThreads.vcxproj.filters  ThreadManagement.cpp
DelayedEvaluation/: DelayedEvaluation.vcxproj.filters
FuncPrograming/: Composefunc.cpp  CurryMain.cpp  FuncPrograming.vcxproj  FuncPrograming.vcxproj.filters
Lambda/: Lambda.vcxproj  lambdamain.cpp
ModerCPPFunc/: ModerCPPFunc.vcxproj
ModernCPP Features/: ModernCPPFeatures.sln
ModernCPP Features/RValueReference/: RValueReference.cpp  RValueReference.vcxproj  RValueReference.vcxproj.filters
ModernCPP Features/Threads/: Threads.cpp  Threads.vcxproj
ModernFunctionalCPP/: ModerCPPFunc.sln
ModernFunctionalCPP/DelayedEvaluation/: DelayedAdd.cpp  DelayedEvaluation.vcxproj
ModernFunctionalCPP/HeterogenContainer/: HeterogenContainer.vcxproj  main.cpp
ModernFunctionalCPP/Lambda/: Lambda.vcxproj.filters
ModernFunctionalCPP/ModerCPPFunc/: ModerCPPFunc.vcxproj  main.cpp
ModernFunctionalCPP/Tuple/: tuplemain.cpp
ModernFunctionalCPP/VariadicLambda/: VariadicLambda.vcxproj  main.cpp
SmartPtr/: SmartPtr.vcxproj  main.cpp
Tuple/: Tuple.vcxproj  Tuple.vcxproj.filters
WeeklyCPP2020/: WeeklyCPP2020.sln
WeeklyCPP2020/Snippets/: AutoDeduction.h  Snippets.cpp  (+2 more)
[Udemy]AdvancedCPP/: AdvancedCPP.sln
[Udemy]AdvancedCPP/Exceptions/: BasicException.cpp  BasicException.h  CMakeLists.txt  CMakeSettings.json  ExceptionMain.cpp  Exceptions.vcxproj
